# blues

./: .gitignore  Cargo.toml  fac.b7  fib.b7  parfac.b7  parfib.b7  parfib_improved.b7  parfib_naive.b7
src/: cli.rs  grammar.pest  main.rs  parser.rs
src/error/: mod.rs  pattern_error.rs  type_error.rs
src/eval/: context.rs  environment.rs  mod.rs  prelude.rs  value.rs
src/parser/: grammar.pest  mod.rs
src/syntax/: abstraction.rs  mod.rs  pattern.rs  program.rs  term.rs  type.rs
src/type_check/: context.rs
