[package]
name = "moody"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
indexmap = "2.2.5"
pest = "2.7.7"
pest_derive = "2.7.7"
thiserror = "1.0.57"

[profile.release]
lto = "thin"
debug = true
