[package]
name = "b7"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
ariadne = "0.4.0"
indexmap = "2.2.6"
pest = "2.7.9"
pest_derive = "2.7.9"
rayon = "1.10.0"

[profile.release]
lto = "thin"
debug = true
